# spi-fpga

./: README.md  pyproject.toml  spi.py  tmp.v  uut.vcd
.devcontainer/: Dockerfile  devcontainer.json
